--- a/package.json
+++ b/package.json
@@ -7,7 +7,18 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "jest"
+    "test:twoSum": "jest tests/twoSum.test.js",
+    "test:palindrome": "jest tests/palindrome.test.js",
+    "test:fizzBuzz": "jest tests/fizzBuzz.test.js",
+    "test:reverseString": "jest tests/reverseString.test.js",
+    "test:countVowels": "jest tests/countVowels.test.js",
+    "test:maxOfThree": "jest tests/maxOfThree.test.js",
+    "test:sumOfArray": "jest tests/sumOfArray.test.js",
+    "test:findSmallest": "jest tests/findSmallest.test.js",
+    "test:countOccurrences": "jest tests/countOccurrences.test.js",
+    "test:removeDuplicates": "jest tests/removeDuplicates.test.js",
+    "test:factorial": "jest tests/factorial.test.js",
+    "test:sumOfDigits": "jest tests/sumOfDigits.test.js"
   },
   "keywords": [],
   "author": "",
