--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "tests"
   },
   "scripts": {
+    "test": "jest --coverage",
     "test:twoSum": "jest tests/twoSum.test.js",
     "test:palindrome": "jest tests/palindrome.test.js",
     "test:fizzBuzz": "jest tests/fizzBuzz.test.js",
